--- a/Assignment_MSB104_q.qmd
+++ b/Assignment_MSB104_q.qmd
@@ -705,18 +705,32 @@ year fixed effects
 NUTS 2 fixed effects
 (Please ignore for this assignment the alternative determinants from assignment 2)
 
-```{r}
-paneldata <- gdppop%>%
+```{r penal}
+#| echo: false
+penaldata <- gdppop %>%
+  mutate(nuts2 = substr(Region,1,4))%>%
+  group_by(nuts2, Year) %>%
+  mutate(Gini = gini.wtd(gdp_per_capita, w = Population),
+         gdp_n3 = sum(GDP, na.rm=T),
+         pop_n3 = sum(Population, na.rm=T)) %>%
+  mutate(gdp_n2 = sum(gdp_n3),pop_n2 = sum(pop_n3))%>%
+  ungroup() %>%
+  #Keeping only 1 obs per NUTS 2
+    distinct(Year, nuts2,Gini,gdp_n2,pop_n2) %>%
+  mutate(gdp_per_capita = gdp_n2/pop_n2*1000000)%>%
+  mutate(Gini3 = Gini*100000)
   
-```
+ penaldata$Fra <- ifelse(penaldata$nuts2 == "FR..", 1,0)
 
+```
 
 ```{r}
-Panel <- gdppop %>%
- plm(y ~ x1, data=Panel, index=c("Region", "Year"), model="within")
+penaldata <- gdppop %>%
+plm(nuts2 ~ Year, data = penaldata, index = c("nuts2", "Year"), model="within")
+summary(penaldata)
 
 ```
-
+ plm(nuts2 ~ Year, data=penaldata, index=c("nuts2", "Year"))
   data(Penal, package = "wooldridge")
 Penal$id <- rep(1:50, each = 2)
 
