--- a/Assignment_MSB104_q.qmd
+++ b/Assignment_MSB104_q.qmd
@@ -48,16 +48,12 @@ suppressMessages(library(stargazer))
 suppressMessages(library(plm))
 
 ```
-# Assignment 1
+# Introduction 
 In the subject MSB104 econometrics, this year we will hand in an assignment divided into four assignments throughout the semester. The assignments must be written and calculated in the software R. We are group one and the countries that will be representing in our assignment is: Denmark, France, Hungary, Portugal and Slovakia.
 
-In this assignment we downloaded two dataset from Eurostat. The data contains GDP (nama_10r_3gdp) and population (demo_r_pjanaggr3,pi) for countries over the last 20 years, on a NUTS3 level. 
-When we have all the information we need from the dataset, we are going to calculate the GDP per capita and describe the data by using the meta data description from Eurostat. 
 
-In the second part of this assignment we will use our data to calculate the population watertight GDP Ginie coefficients for the European NUTS2 (j) level and describe our new data. Then we are going to plot the distribution of Ginie coefficients
-In the end of the first assignment we will discuss if there are noteworthy outliers.
-
-There are different types of GDP values and the unit is stored in a column named "UNIT", we have chosen to use values where unit is MIO_EUR. This unit represents the GDP value in million Euros.
+## 1. Download two dataset from Eurostat
+The data contains GDP (nama_10r_3gdp) and population (demo_r_pjanaggr3,pi) for countries over the last 20 years, on a NUTS3 level. 
 
 ```{r Dataset GDP and rename obs_value, time_period and geo}
 #| echo: false
@@ -72,7 +68,7 @@ Pop <- Pop %>%
       rename(Population = "OBS_VALUE",Year = "TIME_PERIOD", Region = "geo") 
 ```
 
-We made a new dataset called gdppop. In this dataset we will gather the information we need from the other two datasets and combine them into one dataset. This will do it easier in our ongoing research.  
+To collect the information we need in these two datasets, we created a new dataset which we call gdppop. We collect the information we need to take with us further in the task.
 
 ```{r Make one datset with GDP and Population}
 #| echo: false
@@ -92,12 +88,7 @@ na.omit()
 #NA variables are removed
 ```
 
-
-Here is the refrence to the table @tbl-1
-
-Briefly about what we found in the summary. We found the min and the max values. i.e. the smallest and the highest GDP per capita for the country. We also found 1st quartile and 3rd quartile. The first quartile was the observation between the median and the lowest value, and looks at the 25% lowest values from the 75% highest. The median looks at the value that is observed the most times in the middle of the observations. The third quartile is then, naturally enough, the value between the median and the highest value.We have also look at mean which told us what the average observation for all regions was.
-
-And then we further look at GDP, population and GDP per capita in our five countries and what results it gives us when we calculate all the NUTS3 regions together.
+Briefly about what we found in the summary @tbl-1. We found the min and the max values. i.e. the smallest and the highest GDP per capita for the countries. We also found 1st quartile and 3rd quartile. The first quartile was the observation between the median and the lowest value, and looks at the 25% lowest values from the 75% highest. The median looks at the value that is observed the most times in the middle of the observations. The third quartile is then, naturally enough, the value between the median and the highest value.We have also look at mean which told us what the average observation for all regions was.
 
 From the summary in @tbl-2  we can see that GDP per capita at NUTS3 level for all our countries was 22 438,88 Euro. Since we don't have any other values to compare with we can't say to much about it, because it doesn´t give us to much information. We will therefor look at the nuts3 regions for each country. 
 
@@ -112,58 +103,38 @@ Since Hungary and Slovakia have few nuts3 regions we chose to look at them toget
 
 ### Denmark
   
-Denmark is a small country in Scandinavia,and they don't have many NUTS3 regions. Kobenhagen is the capital of Denmark, and as we can see above it stand out together with the surrounding region. we can se that the region around the capital has had a higher growth. Capital cities are often richer than other regions. we can see that in Denmark as well. 
+Denmark is a small country in Scandinavia,and they don't have many NUTS3 regions. Kobenhagen is the capital of Denmark, and as we can see above it stand out together with the surrounding region. The region around the capital has had a higher growth. Capital cities are often richer than other regions. 
 
 ***Graph 1***
 
-@fig-1
-
 To get an overview, we have chosen to look at 2010 for all the regions in Denmark to see which regions are the richest and least wealties.
 
-The whealtiest regions in Denmark
+The three Whealties regions @tbl-3 in Denmark are Kobenhagen (DK011), Kobenhagen area (DK012) and Sydjylland (DK032).
+The three least wealtiest regions @tbl-4 in Denmark are Vest- og Sydjælland (DK022), Bornholm (DK014) and Østsjælland (DK021).
+Denmark has 11 nuts3 regions, it is the capital and the surrounding region that stands out among the richest, in the poor countries it is more even, there is a difference of 30,000 Euro between these three regions.
 
-The three Whealties regions in Denmark are Kobenhagen (DK011), Kobenhagen area (DK012) and Sydjylland (DK032) @tbl-3.
-The three least wealtiest regions in Denmark are Vest- og Sydjælland (DK022), Bornholm (DK014) and Østsjælland (DK021).
-
-@tbl-4
-
-@tbl-5
-Denmark has 11 nuts3 regions, it is the capital and the surrounding region that stands out among the richest, in the poor countries it is more even, we can see that there is 30,000 Euro between the richest and poorest.
+@tbl-5 SKAL VI SNAKKE OM SAMMENDRAGET ELLER TA DET BORT 
 
 ### France
 
 France is a country in Western Europe, they also have colonies in other parts of the world. France has the largest land areas in the EU, which we see in the fact that they have over a hundred nuts3 regions.
 
-@fig-2
+Since France has so many nuts3 regions, it is not so easy to distinguish the different regions. In @fig-2 the capital Paris stands out. Based on the summary @tbl-6, we can see that there is a difference between min and max. If we look more closely at the figures, it is possible to see that the reason may be that France has colonies in other countries that are included. These colonies are located in Africa and South America which has a negative effect on France's overall GDP. For further research, we have chosen to remove these regions from the data set @tbl-7, @fig-3.
 
-Since France has so many nuts3 regions, it is not so easy to distinguish the different regions. We see that here too the capital Paris stands out. When we made a summary, we see that there is a difference in min and max. When we look more closely at the numbers, we can see that this may be due to France having colonies in other countries that are included. These colonies are located in Africa and South America which has a negative effect on France's overall GDP. For further research, we have chosen to remove these regions from the data set.
+After the FRY regions have been removed, we are left with 96 nuts3 regions. The three wealtiest regions @tbl-8 are Paris (FR101), Hauts-de-seine (FR105) and Rhône (FRK26). Paris og Hauts-de-seine stands out clarly from the other region with a difference of approximately 50,000 Euro GDP pr capita.
+The three poorest regions @tbl-9 Creuse (FRI22), Ariège (FRJ21) and  Meuse(FRF32). These regions have quite the same GDP pr capita. 
 
-@fig-3
-
-The whealtiest regions in France
-
-@tbl-6
-
-France now have 96 nuts3 regions. The three wealtiest regions are Paris (FR101), Hauts-de-seine (FR105) and Rhône (FRK26). Paris og Hauts-de-seine stands out clarly from the other region with a difference of approximately 50,000 Euro GDP pr capita.
-The three poorest regions Creuse (FRI22), Ariège (FRJ21) and  Meuse(FRF32). These regions have quite the same GDP pr capita. 
-
-@tbl-7
+@tbl-10 SKAL VI SNAKKE OM SAMMENDRAGET ELLER TA DET BORT 
 
 ### Hungary and Slovakia
 
-Hungary and Slovakia are both countries in Central Europe, here we see that the capitals Bratislava and Budapest both had great growth until 2008. Then Budabest went down a little while Bratislava had a larger increase. the rest of the regions have had an more steady growth.
+Hungary and Slovakia are both countries in Central Europe. Both Bratislava and Budapest had good growth until 2008. After that, things went down with Bratislava for a while, while Budapest had a larger increase @fig-4. The other regions in these countries have had more stable growth.
 
-@fig-4
+Hungary and Slovakia has 28 regions together. The three whealties @tbl-11 are Bratislava (SK010), Budapest (HU110) and Trnava (SK021). The capitals of both countries have the richest region. The least wheltiest regions @tbl-12 are Nògràd(HU313), Szabolcs-Szatmàr-Bereg(HU323). We can see that the three poorest regions belong to Hungary. which means that they have a lower GDP per capita than Slovakia in the poorest regions. We see that there is a difference between min and max in the regions of Hungary. 
 
-The whealtiest regions in Hungary and Slovakia
+There is a difference of approximately 25,000 Euro between the whealties and poorest regions in Hungary. Based on these observations, Bratislava is the richest region, since we do not see any of Slovakia's regions among the lowest, we can assume that Slovakia has a higher GDP per capita than Hungary has for its inhabitants.
 
-@tbl-8
-
-Hungary and Slovakia has 28 regions together. The tre whelties are Bratislava (SK010), Budapest (HU110) and Trnava (SK021). The capitals of both countries have the richest region. The least wheltiest regions are Nògràd(HU313), Szabolcs-Szatmàr-Bereg(HU323). We can see that the three poorest regions belong to Hungary. which means that they have a lower GDP per capita than Slovakia in the poorest regions. We see that there is a difference between min and max in the regions of Hungary. 
-
-@tbl-9
-
-There is a difference of approximately 25,000 Euro between the whelties and poorest regions in Hungary. Based on these observations, Bratislava is the richest region, since we do not see any of Slovakia's regions among the lowest, we can assume that Slovakia has a higher GDP per capita than Hungary has for its inhabitants.
+@tbl-13 SKAL VI SNAKKE OM SAMMENDRAGET ELLER TA DET BORT 
 
 ### Portugal
 
@@ -719,7 +690,8 @@ penaldata <- gdppop %>%
     distinct(Year, nuts2,Gini,gdp_n2,pop_n2) %>%
   mutate(gdp_per_capita = gdp_n2/pop_n2*1000000)%>%
   mutate(gdp_per_capita = log(gdp_n2/pop_n2*1000000))%>%
-  mutate(Gini3 = Gini*100000)
+  mutate(Gini3 = Gini*100000) %>% 
+  mutate(nuts0 = substr(nuts2,1,2))
   
 ```
 
